<resources>
    <string name="app_name">QUICKMART</string>
    <color name="Black">#000000</color>
    <color name="ExpandChildBackground">#2e856e</color>
    <color name="ExpandGroupBackground">#228c22</color>
    <string name="sign_in">Sign In</string>
    <string name="Tag_line">Buy Anything Anytime</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="user_name">UserName</string>
    <string name="Fill_userName">"Enter  your username "</string>
    <string name="Password">Password</string>
    <string name="pass_word">Please enter your password</string>
    <string name="logged_in">Keep me logged in</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="jacket">Jacket</string>
    <string name="dress2">Dress2</string>
    <string name="dress3">dress3</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="share">If you like the application then do share with others!</string>
    <string name="about">This app runs on all of the android devices or more than 4.0</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="kids">Kids</string>

    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="your_orders">Your Orders</string>
    <string name="menu_men">men</string>
    <string name="menu_women">women</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_feedback">feedback</string>
    <string-array name="itemsSelling">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>


    </string-array>


</resources>
