<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="12dp">

    <ImageView
        android:id="@+id/album"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/pic1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jacket"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:id="@+id/album_title"/>

    <ImageView
        android:id="@+id/album2"
        android:layout_width="188dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/pic2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dress2"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:id="@+id/album_title2"/>
    <ImageView
        android:id="@+id/album3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/pic3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dress3"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:id="@+id/album_title3"/>
</LinearLayout>
